--- a/public/css/main.less
+++ b/public/css/main.less
@@ -11,7 +11,7 @@
 @import "./less/font-awesome.less";
 @import "accordion.less";
 
-body {
+html, body {
     background-color: #000;
     color: @font-color;
    /* font-family: "Lucida Console", Monaco, monospace;*/
@@ -27,6 +27,17 @@ label {
     margin: .8rem;
     font-weight: 200;
 }
+/* INTERACTIVOS EXHIBIT STUFF */
+#canvas {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+/* INTERACTIVOS EXHIBIT END */
 /*
 input{
     color: #000;
@@ -165,10 +176,14 @@ h4 {
     height: 478px;
     background-color: purple;
 }
-video#bgvid { 
+video { 
     width: 100%;
     height: 100%;
     object-fit: cover;
+    /*
+      -webkit-transform: scaleX(2); 
+        -moz-transform: scaleX(2);
+    */
 }
 /* INTERACTIVOS EXHIBIT END */
 .toolbar-padding {
