--- a/public/css/main.less
+++ b/public/css/main.less
@@ -26,6 +26,19 @@ label {
     display: inline;
     margin: .8rem;
     font-weight: 200;
+
+}
+
+.stream-controls {
+    color: #fff;
+    font-size: 20px;
+    margin: 10px;
+     cursor: pointer;
+}
+
+.stream-controls:hover {
+    color: #0f0;
+   
 }
 /*
 input{
