add stream fully working

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -159,6 +159,7 @@ h4 {
     color: #000;
     font-size: 24px;
     background-color: rgba(255, 255, 255, 0.9);
+    pointer-events: all;
 }
 
 /* INTERACTIVOS EXHIBIT START */
@@ -203,8 +204,8 @@ video#bgvid {
 
 .toolbar-element{
     position: fixed;
-    
-     margin: 5px;
+    pointer-events: all;
+    margin: 5px;
     padding: 5px;
     background-color: #000;
     border: solid 2px @primary-color;
