--- a/public/css/main.less
+++ b/public/css/main.less
@@ -6,27 +6,115 @@
 @border-color: #bbb;
 @link-color: #1eaedb;
 @font-color: #fff;
-
-@import "skeleton.less";
+@font-family: "Courier New", Courier, monospace;
 @import "./less/font-awesome.less";
-@import "accordion.less";
+@import "./normalize.css";
 
 html, body {
     background-color: #000;
     color: @font-color;
    /* font-family: "Lucida Console", Monaco, monospace;*/
-    font-size: "11px";
+    font-size: 16px;
+    line-height: 20px;
     display: inline;
-    // margin: 2px;
+    margin: 2px;
     margin: 0;
-   font-family: "Courier New", Courier, monospace;
+   font-family: @font-family;
 }
 
-label {
+input{
+    margin: 5px;
+}
+select {
+    color: #000;
+    font-size: 12px;
+  height: 24px;
+  padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
+  background-color: #fff;
+  border: 1px solid lighten(@border-color, 8.8%);
+  border-radius: 0px;
+  box-shadow: none;
+  margin: 5px;
+  box-sizing: border-box;
+}
+
+select:focus {
+  border: 1px solid @primary-color;
+  outline: 0;
+}
+button {
+    background-color: @secondary-color; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: @font-family;
+    cursor: pointer;
+    pointer-events: all;
+}
+
+button:hover {
+    background-color: @primary-color;
+    
+}
+
+input[type=button] {
+     background-color: @secondary-color; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+     pointer-events: all;
+}
+
+input[type=button]:hover {
+    background-color: @primary-color;
+}
+
+.toolbar{
+    position: fixed;
+    width: 100%;
+    bottom: 0px;
+    left: 0px;
+    height: 50px;
+    font-size: 34px;
+    color: #000;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.toolbar-button{
+    float: right;
+}
+/*label {
     display: inline;
     margin: .8rem;
     font-weight: 200;
 
+}*/
+
+.right-menu{
+    position: fixed;
+    right: 0px;
+    bottom: 50px;
+    padding: 20px;
+    background-color: @dark-grey;
+    pointer-events: all;
+}
+
+.peer-container {
+    display: inline-block;
+    width: 500px;
+    height: 100%;
+    top: 0px;
+    vertical-align:top;
+    /*overflow-y: scroll;*/
 }
 
 .stream-controls {
@@ -37,7 +125,19 @@ label {
 }
 
 .stream-controls:hover {
-    color: #0f0;
+    color: @primary-color;
+   
+}
+
+.audio-icon {
+    color: #fff;
+    font-size: 30px;
+    margin: 10px;
+     cursor: pointer;
+}
+
+.audio-icon:hover {
+    color: @primary-color;
    
 }
 
@@ -57,179 +157,8 @@ h4 {
     font-size: 13px;
 }
 
-.showFull {
-    display: inline-block;
-    margin-left: 15px;
-    margin-right: 15px;
-}
-
-#send {
-    margin-top: 5px;
-    margin-bottom: 0px;
-    float: right;
-}
-
-#chat-input {
-    width: 100%;
-}
-#chatLog {
-    word-break: break-all;
-}
-.mediaContainer {
-  /*  position: relative;*/
-    display: inline-block;
-    width: 300px;
-   // padding: 2px;
-    margin: 5px;
-    top: 0px;
-    //background-color: @dark-grey;
-    vertical-align:top;
-    border: solid 4px @light-grey;
-}
-.mediaContainer video {
-   /* position: absolute;*/
-    width: 100%;
-    height: 100%;
-}
-
-.peer-header {
-    width: 100%;
-    background: @light-grey;
-    color: black;
-}
-
-.accordion-section.open>.accordion-header{
-    background-color: @primary-color;
-    color: #000;
-    padding-left: 20px;
-    padding-right: 10px;
-}
-
-.accordion-section.open>.accordion-header:before {
-    content: "\f0d7";
-     color: #000;
-
-    font-family: FontAwesome;
-    position: relative;
-    left:-10px;
-   /* position:absolute;*/
-    top:0;
- }
-
-.accordion-section.closed>.accordion-header{
-    background-color: #666;
-    color: #fff;
-    padding-left: 20px;
-    padding-right: 10px;
-}
-
-.accordion-section.closed>.accordion-header:before {
-    content: "\f0da";
-    font-family: FontAwesome;
-     position: relative;
-    left:-10px;
-   /* position:absolute;*/
-    top:0;
- }
-
-.accordion-section.open>.accordion-content{
-     visibility: visible;
-     height: inherit;
-}
-
-.accordion-section.closed>.accordion-content{
-     visibility: hidden;
-     display: none;
-     height: 0px;
-}
- #dashboard {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 80%;
- }
-
-.toolbar {
-    position: fixed;
-    height: 40px;
-    bottom: 0px;
-    left: 0px;
-    width: 100%;
-    color: #000;
-    font-size: 24px;
-    background-color: rgba(255, 255, 255, 0.9);
-    pointer-events: all;
-}
-
-/* INTERACTIVOS EXHIBIT START */
-#people {
-    width: 100%;
-    min-height: 75%;
-    height: 175px;
-    background-color: pink;
-    display: table;
-    table-layout: fixed;
-}
-.person {
-    text-align: center;
-    display: table-cell;
-    width: 100%;
-    height: 100%;
-    background-color: green;
-}
-#recording {
-    width: 100%;
-    height: 478px;
-    background-color: purple;
-}
-video#bgvid { 
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-/* INTERACTIVOS EXHIBIT END */
-.toolbar-padding {
-    margin-left: 5px;
-}
-
-.toolbar-button{
-    float: right;
-    display: inline-block;
-    margin: 5px;
-    margin-bottom: 0px;
-    vertical-align: top;
-
-}
-
-.toolbar-element{
-    position: fixed;
-    pointer-events: all;
-    margin: 5px;
-    padding: 5px;
-    background-color: #000;
-    border: solid 2px @primary-color;
-}
 
 
-input {
-    border: none;
-    font-family: "Courier New", Courier, monospace;
-    font-size: 12pt;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-left: 4px;
-    padding-right: -4px;
-    margin: 0;
-    
-}
-
-.toolbar-element.show {
-    bottom: 40px;
-}
-.toolbar-element.hide{
-    bottom: -500px;
-}
 
 #chatWindow {
     right: 0px;
@@ -285,26 +214,6 @@ input {
     left: 120px;                
 }*/
 
-#createRoom {
-    position: relative;
-    left: 0px;
-    top: 0px;    
-}
 
-
-.list-item{
-    padding: 5px;
-    margin-left: 45px;
-    margin-top: 15px;
-}
-
-.stream-label{
-    color:  #12acef;
-    cursor: pointer;
-}
-
-.list-item.active{
-    background-color: #333;
-}
 
 
